# QueryGuard

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .releaserc.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  taskfile.dist.yaml
.github/workflows/: publish.yaml  release.yaml  release.yml  test.yaml  test.yml
QueryGuard/: __main__.py  cli.py  config.py  engine.py  exceptions.py  parser.py  rules.py
docs/: index.md  requirements.txt  rules.md  usage.md
queryguard/: __init__.py  __main__.py  cli.py  config.py  engine.py  exceptions.py  files.py  output.py  parser.py  rules.py
sql_enforcer/: __main__.py  cli.py  engine.py  exceptions.py  parser.py  rules.py
tests/: base_rule_test.py  cli_test.py  config_test.py  engine_test.py  exceptions_test.py  general_rule_test.py  no_alter_app_role_rule_test.py  no_alter_auth_except_object_test.py  no_alter_database_all_test.py  no_alter_database_files_test.py  no_alter_database_role_rule_test.py  no_alter_login_rule_test.py  no_alter_server_configuration_test.py  no_alter_server_role_rule_test.py  no_alter_user_rule_test.py  no_backup_rule_test.py  no_create_app_role_rule_test.py  no_create_database_role_rule_test.py  no_create_database_rule_test.py  no_create_login_rule_test.py  no_create_server_role_rule_test.py  no_create_user_rule_test.py  no_drop_app_role_rule_test.py  no_drop_database_role_rule_test.py  no_drop_database_rule_test.py  no_drop_login_rule_test.py  no_drop_server_role_rule_test.py  no_drop_user_rule_test.py  no_dynamic_sql_rule_test.py  no_grant_except_object_rule_test.py  output_test.py  parser_test.py
tests/sql/: alter_app_role_1.sql  alter_app_role_2.sql  alter_database_role_1.sql  alter_database_role_2.sql  alter_database_role_3.sql  alter_login_1.sql  alter_login_2.sql  alter_login_3.sql  alter_login_4.sql  alter_login_5.sql  alter_server_role_1.sql  alter_server_role_2.sql  alter_server_role_3.sql  create_app_role_1.sql  create_app_role_2.sql  create_database_role_2.sql  create_login_1.sql  create_login_2.sql  create_login_3.sql  create_login_4.sql  create_server_role_1.sql  drop_app_role_1.sql  drop_app_role_2.sql  drop_database_role_1.sql  drop_database_role_2.sql  drop_login_1.sql  drop_login_2.sql  drop_login_3.sql  drop_login_4.sql  drop_server_role_1.sql  dynamic_sql_1.sql  dynamic_sql_2.sql  dynamic_sql_3.sql  multiple_violations.sql  no_violations.sql
